--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app",
+    "jshint": "jshint --reporter=node_modules/jshint-stylish gulpfile.js",
+    "zip": "grunt zip",
+    "mocha": "mocha ./test/*",
+    "zm": "npm run zip && npm run mocha && npm run jshint"
   },
   "dependencies": {
     "express": "~4.12.2"
@@ -11,7 +15,13 @@
   "devDependencies": {
     "good-mocha-html-reporter": "^2.0.1",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-jslint": "^1.1.14",
+    "grunt-mocha": "^1.0.4",
+    "grunt-mocha-test": "^0.13.2",
     "grunt-zip": "^0.17.1",
     "gulp": "^3.9.1",
     "gulp-istanbul": "^1.1.1",
@@ -23,6 +33,7 @@
     "gulp-zip": "^4.0.0",
     "jshint": "^2.9.4",
     "jshint-html-reporter": "^0.2.5",
+    "jshint-stylish": "^2.2.1",
     "mocha": "^2.3.3",
     "should": "^7.1.1",
     "supertest": "^1.1.0"
